--- a/Qns&Anwrs/conditional_if_else.ipynb
+++ b/Qns&Anwrs/conditional_if_else.ipynb
@@ -1395,28 +1395,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gfkfhgf\n"
+      "1715596777088 1715597083648\n"
      ]
     }
    ],
    "source": [
-    "a=66\n",
-    "if type(a) in (int,float,bytes,complex):\n",
-    "    print('gfkfhgf')\n"
+    "a=[33,42];b=['gjg',49]\n",
+    "if type(a[0]) and type(b[0]) in [int]:\n",
+    "    a+=b\n",
+    "    print(a[0])\n",
+    "else:\n",
+    "    print(id(a),id(b))"
    ]
   },
   {
@@ -1434,7 +1430,7 @@
     }
    ],
    "source": [
-    "#wap to check value + or -\n",
+    "#58.wap to check value + or -\n",
     "# and check even or not , if even didplay half value , if odd display sqaure of given value\n",
     "# if -ve value display absolute value\n",
     "a=-30\n",
