--- a/Qns&Anwrs/practice.ipynb
+++ b/Qns&Anwrs/practice.ipynb
@@ -461,37 +461,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "123123123123123123\n",
-      "(20, 30, 20, 30, 20, 30, 20, 30, 20, 30, 20, 30)\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for *: 'set' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[13], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[39mprint\u001b[39m(s\u001b[39m*\u001b[39m\u001b[39m6\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[39mprint\u001b[39m(a\u001b[39m*\u001b[39m\u001b[39m6\u001b[39m)\n\u001b[1;32m----> 5\u001b[0m \u001b[39mprint\u001b[39m(b\u001b[39m*\u001b[39;49m\u001b[39m6\u001b[39;49m)\n\u001b[0;32m      6\u001b[0m \u001b[39mprint\u001b[39m(c\u001b[39m*\u001b[39m\u001b[39m6\u001b[39m)\n\u001b[0;32m      7\u001b[0m \u001b[39m# unsuported operand * for set and dict\u001b[39;00m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'set' and 'int'"
+      "123123123123123123\n"
      ]
     }
    ],
    "source": [
     "#62: to check replication of a given string with 6\n",
-    "s='123';a=(20,30);b={10,20};c={10:20}\n",
-    "print(s*6)\n",
-    "print(a*6)\n",
-    "print(b*6)\n",
-    "print(c*6)\n",
-    "# unsuported operand * for set and dict\n"
+    "s='123'\n",
+    "print(s*6)"
    ]
   },
   {
@@ -1604,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1613,9 +1597,10 @@
      "text": [
       "False\n",
       "True\n",
-      "True\n",
       "False\n",
-      "True\n"
+      "True\n",
+      "True\n",
+      "False\n"
      ]
     }
    ],
@@ -1635,10 +1620,10 @@
     "print(st in col)\n",
     "st='a'\n",
     "col={'a':10,'b':20,'c':30}\n",
-    "st in col\n",
+    "print(st in col)\n",
     "st=10\n",
     "col={'a':10,'b':20,'c':30}\n",
-    "st in col\n"
+    "print(st in col)\n"
    ]
   },
   {
@@ -1729,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1744,8 +1729,10 @@
    "source": [
     "#122: wae to check given value is single value or not (/ int/float/complex/boolean/Non)\n",
     "c=b'1010';b='stringvalue'\n",
-    "print(type(c) in [int,float,complex,bool,bytes,type(None)])\n",
-    "print(type(b) in [int,float,complex,bool,bytes,type(None)])"
+    "# print(type(c) in [int,float,complex,bool,bytes,type(None)])\n",
+    "# print(type(b) in [int,float,complex,bool,bytes,type(None)])\n",
+    "print(type(c) not in [str,list,tuple,set,dict])\n",
+    "print(type(b) not in [str,list,tuple,set,dict])"
    ]
   },
   {
@@ -2076,34 +2063,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n",
       "True\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:5: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-      "<>:5: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-      "C:\\Users\\Shaik Imran\\AppData\\Local\\Temp\\ipykernel_32428\\2300306636.py:5: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-      "  print(257 is 257)\n"
      ]
     }
    ],
    "source": [
     "#139: to check  if two values  are pointing to the same address or not\n",
-    "a=257\n",
-    "b=257\n",
-    "print(a is b)\n",
-    "print(257 is 257)\n"
+    "a=255;b=255\n",
+    "# a=257;b=257\n",
+    "print(id(a)==id(b),)\n",
+    "\n"
    ]
   },
   {
@@ -2140,7 +2116,7 @@
     }
    ],
    "source": [
-    "#to check whether given number is positive or not.\n",
+    "#141.to check whether given number is positive or not.\n",
     "n=-10\n",
     "if 0<=n:\n",
     "    print('given value is positive')\n",
@@ -2162,7 +2138,7 @@
     }
    ],
    "source": [
-    "# to check given value is even or not . if even diplay  given value is even value eith given value\n",
+    "#142.to check given value is even or not . if even diplay  given value is even value eith given value\n",
     "n=4\n",
     "if n%2==0:\n",
     "    print('even number:',n)"
@@ -2182,7 +2158,7 @@
     }
    ],
    "source": [
-    "# to check given value is even or not . if even diplay  given value is even value eith given value\n",
+    "#143.to check given value is even or not . if even diplay  given value is even value eith given value\n",
     "n=18\n",
     "if n%2==0:\n",
     "    print(n,'even number:')"
@@ -2203,7 +2179,7 @@
     }
    ],
    "source": [
-    "# to check given value is even or not . if even diplay  given value is even value eith given value\n",
+    "#144.to check given value is even or not . if even diplay  given value is even value eith given value\n",
     "n=18\n",
     "if n%2==0:\n",
     "    print( f'{n} even number:') # dynamic string formate\n",
@@ -2224,7 +2200,7 @@
     }
    ],
    "source": [
-    "# to check given value is even or not . if even diplay  given value is even value eith given value\n",
+    "#145.to check given value is even or not . if even diplay  given value is even value eith given value\n",
     "n=19\n",
     "if n%2!=0:\n",
     "    print(n,'odd number:')"
@@ -2244,7 +2220,7 @@
     }
    ],
    "source": [
-    "#wap to check whether the last digit of the given number is greater than 5 or not\n",
+    "#146.wap to check whether the last digit of the given number is greater than 5 or not\n",
     "n=158\n",
     "if (n%10>5):\n",
     "    print(f'given  value last digit is greater than 5')"
@@ -2264,7 +2240,7 @@
     }
    ],
    "source": [
-    "#wap to check wether given value is divisible by 2 and 6 . if condition is satisfied to convert given number to complex and display value\n",
+    "#147.wap to check wether given value is divisible by 2 and 6 . if condition is satisfied to convert given number to complex and display value\n",
     "n=156\n",
     "if (n%2==0 and n%6==0):\n",
     "    b=complex(n)\n",
@@ -2285,7 +2261,7 @@
     }
    ],
    "source": [
-    "#wap to check wether given intiger is divisible by 4 and value should be in range of 48 to 122 and value is even. if condition is true convert given value to charecter\n",
+    "#148.wap to check wether given intiger is divisible by 4 and value should be in range of 48 to 122 and value is even. if condition is true convert given value to charecter\n",
     "n=80\n",
     "if(n%4==0  and 48<=n<122 and n%2==0):\n",
     "    print(chr(n))"
@@ -2306,7 +2282,7 @@
     }
    ],
    "source": [
-    "#wap to check the given value is mutable or not if mutable. store the value inside the list without changing existing memory block address\n",
+    "#149.wap to check the given value is mutable or not if mutable. store the value inside the list without changing existing memory block address\n",
     "n=[44]\n",
     "print(id(n))\n",
     "if (type(n)   in (list,set,dict) ):\n",
@@ -2329,7 +2305,7 @@
     }
    ],
    "source": [
-    "#wap to check the given value is \n",
+    "#150.wap to check the given value is \n",
     "n=[10,20]\n",
     "temp=['a','b','c']\n",
     "if (type(n)   in (list,set,dict) ):\n",
@@ -2355,7 +2331,7 @@
     }
    ],
    "source": [
-    "#wap to check the given value is \n",
+    "#151.wap to check the given value is \n",
     "n=[10,20]\n",
     "temp=['a','b','c']\n",
     "if (type(n)   in (list,set,dict) ):\n",
@@ -2437,7 +2413,7 @@
     }
    ],
    "source": [
-    "# to insert the value in specific position\n",
+    "#152. to insert the value in specific position\n",
     "l=[10,20]\n",
     "t={'a','b'}\n",
     "if (type(l) in (list,set,dict)):\n",
@@ -2446,19 +2422,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "if value is even and divisible by 4 display cube of the value"
+    "153.if value is even and divisible by 4 display cube of the value"
    ]
   },
   {
@@ -2484,7 +2451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "wap to reverse the given string if len of string is even concate new sting from middle of the given string"
+    "154.wap to reverse the given string if len of string is even concate new sting from middle of the given string"
    ]
   },
   {
@@ -2513,7 +2480,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "if the given value present b/w ascii value print ascii charecter else find given value is even or odd\n",
+    "155.if the given value present b/w ascii value print ascii charecter else find given value is even or odd\n",
     ", if even display number"
    ]
   },
@@ -2556,7 +2523,7 @@
     }
    ],
    "source": [
-    " #wap wheather the character is upper case or lower case if uppercase convert it into lower case,\n",
+    "#156.wap wheather the character is upper case or lower case if uppercase convert it into lower case,\n",
     "#check weather first and last characters are in sequence or not if the both are in sequence swap the first and last character\n",
     "# if both are not in sequence the last char should be converted to sequence of first character\n",
     "\n",
@@ -2590,7 +2557,7 @@
     }
    ],
    "source": [
-    "#check weather first and last characters are in sequence or not if the both are in sequence swap the first and last character\n",
+    "#157.check weather first and last characters are in sequence or not if the both are in sequence swap the first and last character\n",
     "# if both are not in sequence the last char should be converted to sequence of first character\n",
     "\n",
     "a='ajab'\n",
@@ -2604,6 +2571,50 @@
     "\n",
     "   \n",
     "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1\n",
+      "1 2\n",
+      "2 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a=b'101'\n",
+    "# # for i in range(0,a):\n",
+    "#     # print(i)\n",
+    "# print(ord(a))\n",
+    "a=b'101'   \n",
+    "for i in range(0,len(a)):\n",
+    "    \n",
+    "    print(i,i+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48 <class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=b'100'\n",
+    "print(a[2],type(a[2]))"
    ]
   }
  ],
