--- a/Qns&Anwrs/simple_if.ipynb
+++ b/Qns&Anwrs/simple_if.ipynb
@@ -1302,21 +1302,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# if-else:-"
+   ]
   },
   {
    "cell_type": "code",
@@ -1332,7 +1320,7 @@
     }
    ],
    "source": [
-    "#wap enven or odd, if true perform square of value,are else cube of the givne value\n",
+    "#1wap enven or odd, if true perform square of value,are else cube of the givne value\n",
     "n=3\n",
     "if n%2==0:\n",
     "    print(n**2)\n",
@@ -1344,7 +1332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "wap to check wether given value is multivalue data type or not if it is multi value , to store the value inside set or else to convert into string."
+    "2.wap to check wether given value is multivalue data type or not if it is multi value , to store the value inside set or else to convert into string."
    ]
   },
   {
@@ -1384,7 +1372,7 @@
     }
    ],
    "source": [
-    "#wap to check given string is polindrome or not if polindrome print zeroth position to middle of the string, else display the rever string\n",
+    "#3.wap to check given string is polindrome or not if polindrome print zeroth position to middle of the string, else display the rever string\n",
     "n='madam' # n='level'\n",
     "if n==n[::-1]:\n",
     "    print(n[0:(len(n)//2)+1])\n",
@@ -1396,7 +1384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "wap to check starting character and middle char both are sequence or not , if sequence extract two characters and concate into given string.\n",
+    "4.wap to check starting character and middle char both are sequence or not , if sequence extract two characters and concate into given string.\n",
     "if not sequence, display the even index position values from given string"
    ]
   },
@@ -1427,7 +1415,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "wap to check whether the give two input numbers are divisible by 3 and 5, if divisible, print 'good morning,\n",
+    "5.wap to check whether the give two input numbers are divisible by 3 and 5, if divisible, print 'good morning,\n",
     "if not divisible, print( good evening)"
    ]
   },
@@ -1457,7 +1445,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "wap to check both the values are odd or not, if odd, display area of the rectagle. if not odd, display the perimeter of the rectangle"
+    "6.wap to check both the values are odd or not, if odd, display area of the rectagle. if not odd, display the perimeter of the rectangle"
    ]
   },
   {
@@ -1488,7 +1476,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "wap to find largest of two numbers"
+    "7.wap to find largest of two numbers"
    ]
   },
   {
@@ -1517,7 +1505,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "wap to find largest of two numbers\n",
+    "8.wap to find largest of two numbers\n",
     "using turnary operator"
    ]
   },
@@ -1546,7 +1534,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "wap to check whether  a given value is less than 125 and in between 47 to 125 or not. if condition is true, to perform store the given value as a key and value as a character into  the dict or else to append the value in list and display it."
+    "9.wap to check whether  a given value is less than 125 and in between 47 to 125 or not. if condition is true, to perform store the given value as a key and value as a character into  the dict or else to append the value in list and display it."
    ]
   },
   {
@@ -1579,7 +1567,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "wap to check whether a given character is alphabet or not, if to concate the previous,current and next character . or else to display the character with ascii value\n"
+    "10.wap to check whether a given character is alphabet or not, if to concate the previous,current and next character . or else to display the character with ascii value\n"
    ]
   },
   {
@@ -1608,7 +1596,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "wap to check whether a given length of the string is odd and starting should be uppercase. if all condition satisfied,to append the new string('haii') in the middle of the given string, or else to swap the starting character and ending character or the given string and to  display the remaining character.\n"
+    "11.wap to check whether a given length of the string is odd and starting should be uppercase. if all condition satisfied,to append the new string('haii') in the middle of the given string, or else to swap the starting character and ending character or the given string and to  display the remaining character.\n"
    ]
   },
   {
@@ -1640,19 +1628,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check whether a given value is list and first and last values should be integer if condition is satisfied ,perform first value true division by 3 and last value perform bitwise not, result store in same position in the given list or else to perform length of collection power 2  and display"
+    "12.WAP to check whether a given value is list and first and last values should be integer if condition is satisfied ,perform first value true division by 3 and last value perform bitwise not, result store in same position in the given list or else to perform length of collection power 2  and display"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3.0, 'adf', [44, 33], {454, 'dfs'}, -56]\n"
+      "[3.0, 'adf', [44, 33], {'dfs', 454}, -56]\n"
      ]
     }
    ],
@@ -1664,6 +1652,16 @@
     "    print(a)\n",
     "else:\n",
     "    print(len(a)**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "    "
    ]
   }
  ],
