--- a/Qns&Anwrs/conditional_if_else.ipynb
+++ b/Qns&Anwrs/conditional_if_else.ipynb
@@ -1241,26 +1241,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "42.WAP to check whether the given string is palindrome or not if it is a palindrome \n",
-    "string palindrome along with the string if it is not a palindrome print not \n",
+    "print palindrome along with the string if it is not a palindrome print not \n",
     "palindrome\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "polindrome level\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a='madam'\n",
+    "a='level'\n",
+    "# a='refer'\n",
+    "# a='rotor'\n",
+    "# a='civic'\n",
+    "# a='radar'\n",
+    "# a='non'\n",
+    "# a='wow'\n",
+    "# a='friend'\n",
+    "if a==a[::-1]:\n",
+    "    print(f'polindrome {a}')\n",
+    "else:\n",
+    "    print('not a polindrome')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "43.WAP to check whether a given number is palindrome or not. If palindrome, \n",
+    "repeated-43.WAP to check whether a given number is palindrome or not. If palindrome, \n",
     "display the given value as a palindrome or else not a palindrome."
    ]
   },
@@ -1274,6 +1296,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123123\n"
+     ]
+    }
+   ],
+   "source": [
+    "a='123';b='123'\n",
+    "# a='123';b='1234'\n",
+    "if len(a)==len(b):\n",
+    "    c=a+b\n",
+    "    print(c)\n",
+    "else:\n",
+    "    print(len(a),len(b))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1281,6 +1326,28 @@
     "not. if it is true print the middle item of the second collection, or else if it is false \n",
     "print the first item and last item of the first collection along with the memory \n",
     "address."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a='123';b='123'\n",
+    "# a=[22,33];b=[22,33]\n",
+    "if id(a)==id(b):\n",
+    "    print(b[len(b)//2])\n",
+    "else:\n",
+    "    print(a[0]+a[-1],id(a))"
    ]
   },
   {
@@ -1294,12 +1361,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48 52 57\n"
+     ]
+    }
+   ],
+   "source": [
+    "a='01123456789'\n",
+    "if len(a)>10 and (ord(a[0])+ord(a[-1]))%5==0:\n",
+    "    print(ord(a[0]),ord(a[len(a)//2]),ord(a[-1]))\n",
+    "else:\n",
+    "    print(a*3)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "47.WAP to check whether the middle of the item present in the list is string data type \n",
     "or not if it is string print that list or else if it is not string then print that middle \n",
     "item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 'string', 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[1,2,'string',3,4]\n",
+    "if type(a[len(a)//2])==str:\n",
+    "    print(a)\n",
+    "else:\n",
+    "    print(a[len(a)//2])"
    ]
   },
   {
