--- a/classes/assignment.ipynb
+++ b/classes/assignment.ipynb
@@ -2616,6 +2616,53 @@
     "a=b'100'\n",
     "print(a[2],type(a[2]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "not an alphabet $\n"
+     ]
+    }
+   ],
+   "source": [
+    "a='$'\n",
+    "if 'a'<=a<='z' or 'A'<=a<='Z':\n",
+    "    if 'A'<=a<='Z':\n",
+    "        if a in['AEIOU']:\n",
+    "            print(chr(ord(a)+1))\n",
+    "        else:\n",
+    "            pass\n",
+    "    else:\n",
+    "        print(chr(ord(a)-32))\n",
+    "else:\n",
+    "    print(f'not an alphabet {a}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{33, 44, 55}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import copy\n",
+    "a={33,44,55}\n",
+    "b=a.copy()\n",
+    "print(b)"
+   ]
   }
  ],
  "metadata": {
