--- a/classes/flow_control_statements/1.Decisional&Conditional_statements/5.match_case.ipynb
+++ b/classes/flow_control_statements/1.Decisional&Conditional_statements/5.match_case.ipynb
@@ -250,7 +250,7 @@
     }
    ],
    "source": [
-    "#--------USING TURNARY OPERATER\n",
+    "#--------USING TURNARY OPERATOR\n",
     "a='A'\n",
     "var=[(a,ord(a)),[(chr(ord(a)-32),a),(chr(ord(a)+32),ord(chr(ord(a)+32)))]['A'<=a<='Z']]['a'<=a<='z' or 'A'<=a<='Z']\n",
     "print(var)\n",
@@ -271,7 +271,7 @@
     }
    ],
    "source": [
-    "a='a'\n",
+    "a='a' #---using TURNARY_OPERATOR\n",
     "print([(a,ord(a)),[(chr(ord(a)-32),a),(chr(ord(a)+32),ord(chr(ord(a)+32)))]['A'<=a<='Z']]['a'<=a<='z' or 'A'<=a<='Z'])\n"
    ]
   },
