--- a/classes/flow_control_statements/1.Decisional&Conditional_statements/1.simple_if.ipynb
+++ b/classes/flow_control_statements/1.Decisional&Conditional_statements/1.simple_if.ipynb
@@ -226,26 +226,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m#12:wap to take the input from the user as a number and check whether it is a number or not. if yes. take the number and add some value and print it\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m n\u001b[39m=\u001b[39m\u001b[39mint\u001b[39;49m(\u001b[39minput\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39menter value\u001b[39;49m\u001b[39m'\u001b[39;49m))\n\u001b[0;32m      3\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mtype\u001b[39m(n)\u001b[39m==\u001b[39m\u001b[39mint\u001b[39m :\n\u001b[0;32m      5\u001b[0m     \u001b[39mprint\u001b[39m(n\u001b[39m+\u001b[39m\u001b[39m8\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
      ]
     }
    ],
    "source": [
-    "#12:wap to take the input from the user as a number and check whether it is a number or not. if yes. take the number and add some value and print it\n",
+    "#12:wap to take the input from the user as a number and check whether it is a number or not. \n",
+    "#if yes. take the number and add some value and print it\n",
     "n=int(input('enter value'))\n",
     "if type(n)==int :\n",
-    "    \n",
     "    print(n+8)"
    ]
   },
